--- a/index.html
+++ b/index.html
@@ -11,5 +11,20 @@
 		<title>Portfólio</title>
 	</head>
 	<body>
+		<div class="container">
+			<header>
+				<div class="img-wrapper">
+					<img src="images/headerbg.jpg" alt="">
+				</div>
+				<div class="banner">
+					<h1>
+						Web Developer & Front End Designer
+					</h1>
+					<p>Ismael Marinho Rocha</p>
+					<button>Saiba mais</button>
+				</div>
+			</header>
+
+		</div>
 	</body>
 </html>
