--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 	</head>
 	<body>
 		<div class="container">
+			<div class="hamburguer">
+				<div class="line" id="line1"> </div>
+				<div class="line" id="line2"> </div>
+				<div class="line" id="line3"> </div>
+				<span>Fechar</span>
+			</div>
 			<header>
 				<div class="img-wrapper">
 					<img src="images/headerbg.jpg" alt="">
@@ -25,6 +31,34 @@
 				</div>
 			</header>
 
+			<div class="sidebar">
+				<nav>
+					<ul class="menu">
+						<li class="menu-item">
+							<a href="#" class="menu-link">Home</a>
+						</li>
+						<li class="menu-item">
+							<a href="#" class="menu-link">Conhecimento</a>
+						</li>
+						<li class="menu-item">
+							<a href="#" class="menu-link">Projetos</a>
+						</li>
+						<li class="menu-item">
+							<a href="#" class="menu-link">Contato</a>
+						</li>
+						<li class="menu-item">
+							<a href="#" class="menu-link">Orçamento</a>
+						</li>
+					</ul>
+				</nav>
+				<div class="social-media">
+					<a href="#"><i class="fab fa-facebook"></i></a>
+					<a href="#"><i class="fab fa-github"></i></a>
+					<a href="#"><i class="fab fa-twitter"></i></a>
+				</div>
+			</div>
+
 		</div>
+		<script charset="utf-8" src="js/script.js"> </script>
 	</body>
 </html>
