--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				</div>
 			</header>
 
-			<div class="sidebar">
+			<aside class="sidebar">
 				<nav>
 					<ul class="menu">
 						<li class="menu-item">
@@ -56,7 +56,91 @@
 					<a href="#"><i class="fab fa-github"></i></a>
 					<a href="#"><i class="fab fa-twitter"></i></a>
 				</div>
-			</div>
+			</aside>
+
+			<section class="sessao-conhecimentos">
+				<div class="sessao-header">
+					<h1>Conhecimentos</h1>
+				</div>
+				<div class="conhecimentos">
+					<div class="conhecimento">
+						<div class="conhecimento-header">
+							<i class="fab fa-html5"></i>
+							<h3>HTML</h3>
+						</div>
+						<div class="conhecimento-text">
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean augue eros,
+								consectetur id dapibus id, luctus vel velit. Fusce hendrerit cursus rhoncus.
+								Vivamus ullamcorper ullamcorper orci
+							</p>
+						</div>
+					</div>
+					<div class="conhecimento">
+						<div class="conhecimento-header">
+							<i class="fab fa-css3-alt"></i>
+							<h3>CSS</h3>
+						</div>
+						<div class="conhecimento-text">
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean augue eros,
+								consectetur id dapibus id, luctus vel velit. Fusce hendrerit cursus rhoncus.
+								Vivamus ullamcorper ullamcorper orci
+							</p>
+						</div>
+					</div>
+					<div class="conhecimento">
+						<div class="conhecimento-header">
+							<i class="fas fa-pencil-alt"></i>
+							<h3>Design</h3>
+						</div>
+						<div class="conhecimento-text">
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean augue eros,
+								consectetur id dapibus id, luctus vel velit. Fusce hendrerit cursus rhoncus.
+								Vivamus ullamcorper ullamcorper orci
+							</p>
+						</div>
+					</div>
+					<div class="conhecimento">
+						<div class="conhecimento-header">
+							<i class="fab fa-js"></i>
+							<h3>Javascript</h3>
+						</div>
+						<div class="conhecimento-text">
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean augue eros,
+								consectetur id dapibus id, luctus vel velit. Fusce hendrerit cursus rhoncus.
+								Vivamus ullamcorper ullamcorper orci
+							</p>
+						</div>
+					</div>
+					<div class="conhecimento">
+						<div class="conhecimento-header">
+							<i class="fab fa-bootstrap"></i>
+							<h3>Bootstrap</h3>
+						</div>
+						<div class="conhecimento-text">
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean augue eros,
+								consectetur id dapibus id, luctus vel velit. Fusce hendrerit cursus rhoncus.
+								Vivamus ullamcorper ullamcorper orci
+							</p>
+						</div>
+					</div>
+					<div class="conhecimento">
+						<div class="conhecimento-header">
+							<i class="fab fa-github"></i>
+							<h3>GitHub</h3>
+						</div>
+						<div class="conhecimento-text">
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean augue eros,
+								consectetur id dapibus id, luctus vel velit. Fusce hendrerit cursus rhoncus.
+								Vivamus ullamcorper ullamcorper orci
+							</p>
+						</div>
+					</div>
+					<div class="conhecimentos-img-wrapper">
+						<img src="images/conhecimentos.png" alt="conhecimentos">
+					</div>
+				</div>
+
+			</section>
 
 		</div>
 		<script charset="utf-8" src="js/script.js"> </script>
