--- a/index.html
+++ b/index.html
@@ -141,6 +141,56 @@
 				</div>
 
 			</section>
+			<section class="sessao-projetos">
+				<div class="sessao-header">
+					<h1>Projetos</h1>
+				</div>
+				<div class="projetos">
+					<div class="card">
+						<div class="card-img-wrapper">
+							<img src="images/proj1.jpg" alt="imagem do projeto toDo">
+						</div>
+						<div class="card-info">
+							<h2>ToDo List</h2>
+							<h3>Javascript</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean augue eros,
+								consectetur id dapibus id, luctus vel velit. Fusce hendrerit cursus rhoncus.
+								Vivamus ullamcorper ullamcorper orci
+							</p>
+							<button>Saiba mais</button>
+						</div>
+					</div>
+					<div class="card">
+						<div class="card-img-wrapper">
+							<img src="images/proj2.jpg" alt="imagem do projeto Maratona">
+						</div>
+						<div class="card-info">
+							<h2>Maratona</h2>
+							<h3>HTML, CSS</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean augue eros,
+								consectetur id dapibus id, luctus vel velit. Fusce hendrerit cursus rhoncus.
+								Vivamus ullamcorper ullamcorper orci
+							</p>
+							<button>Saiba mais</button>
+						</div>
+					</div>
+					<div class="card">
+						<div class="card-img-wrapper">
+							<img src="images/proj3.jpg" alt="imagem do projeto Casa Bela">
+						</div>
+						<div class="card-info">
+							<h2>Casa Bela</h2>
+							<h3>HTML</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean augue eros,
+								consectetur id dapibus id, luctus vel velit. Fusce hendrerit cursus rhoncus.
+								Vivamus ullamcorper ullamcorper orci
+							</p>
+							<button>Saiba Mais</button>
+						</div>
+					</div>
+				</div>
+
+			</section>
 
 		</div>
 		<script charset="utf-8" src="js/script.js"> </script>
