--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<div class="line" id="line3"> </div>
 				<span>Fechar</span>
 			</div>
-			<header>
+			<header id="inicio">
 				<div class="img-wrapper">
 					<img src="images/headerbg.jpg" alt="">
 				</div>
@@ -35,19 +35,19 @@
 				<nav>
 					<ul class="menu">
 						<li class="menu-item">
-							<a href="#" class="menu-link">Home</a>
+							<a href="#inicio" class="menu-link">Home</a>
 						</li>
 						<li class="menu-item">
-							<a href="#" class="menu-link">Conhecimento</a>
+							<a href="#conhecimentos" class="menu-link">Conhecimentos</a>
 						</li>
 						<li class="menu-item">
-							<a href="#" class="menu-link">Projetos</a>
+							<a href="#projetos" class="menu-link">Projetos</a>
 						</li>
 						<li class="menu-item">
-							<a href="#" class="menu-link">Contato</a>
+							<a href="#contato" class="menu-link">Contato</a>
 						</li>
 						<li class="menu-item">
-							<a href="#" class="menu-link">Orçamento</a>
+							<a href="#orcamento" class="menu-link">Orçamento</a>
 						</li>
 					</ul>
 				</nav>
@@ -58,7 +58,7 @@
 				</div>
 			</aside>
 
-			<section class="sessao-conhecimentos">
+			<section class="sessao-conhecimentos" id="conhecimentos">
 				<div class="sessao-header">
 					<h1>Conhecimentos</h1>
 				</div>
@@ -141,7 +141,7 @@
 				</div>
 
 			</section>
-			<section class="sessao-projetos">
+			<section class="sessao-projetos" id="projetos">
 				<div class="sessao-header">
 					<h1>Projetos</h1>
 				</div>
@@ -190,7 +190,7 @@
 					</div>
 				</div>
 			</section>
-			<section class="sessao-contato">
+			<section class="sessao-contato" id="contato">
 				<div class="contato-wrapper">
 					<div class="contato-left"> </div>
 					<div class="contato-right">
@@ -214,7 +214,7 @@
 				</div>
 			</section>
 
-			<section class="sessao-orcamento">
+			<section class="sessao-orcamento" id="orcamento">
 				<div class="orcamento-wrapper">
 					<h1>Faca um orçamento</h1>
 					<form>
@@ -239,6 +239,22 @@
 					</form>
 				</div>
 			</section>
+
+			<footer>
+				<div class="footer-content" id="footer">
+					<p>
+						Criado por Ismael Marinho.
+					</p>
+					<div class="social-list">
+						<ul>
+							<li><a href="" target="_blank"><i class="fab fa-facebook"></a></i></li>
+							<li><a href="" target="_blank"><i class="fab fa-instagram"></i></a></li>
+							<li><a href="" target="_blank"><i class="fab fa-twitter"></i></a></li>
+						</ul>
+					</div>
+				</div>
+			</footer>
+			<a href="#inicio" id="link-top"><i class="fas fa-arrow-up"></i></a>
 
 		</div>
 		<script charset="utf-8" src="js/script.js"> </script>
